--- a/web/css/component.css
+++ b/web/css/component.css
@@ -34,11 +34,11 @@ button:hover {
 }
 
 
-.loading-circle{
+.loading-circle {
     background-color: transparent;
     border-radius: 100%;
-    width:10vw;
-    height:10vw;
+    width: 10vw;
+    height: 10vw;
     border: 10px solid #ccc;
     border-top: 10px solid #2990ff;
     animation: spin 1s linear infinite;
@@ -50,7 +50,7 @@ button:hover {
 .background_cluster {
     height: 100vh;
     width: 100vw;
-    background: url("https://assets.codepen.io/209981/iStock-1490023614.jpg");
+    background: url("../img/iStock-1490023614.jpg");
     background-size: 170% 170%;
     background-position: center 50%;
     transition: all ease 1s;
@@ -224,7 +224,7 @@ button:hover {
     color: black;
     font-size: 20px;
     border-radius: 10px;
-    padding:20px;
+    padding: 20px;
     box-shadow: 1px 1px 1px 1px rgb(239, 119, 119);
 }
 
@@ -284,62 +284,69 @@ button:hover {
     width: 75%;
     height: 10vw;
     overflow: hidden;
-    animation:run 5s ease-in-out forwards;
+    animation: run 5s ease-in-out forwards;
 }
 
 .conma>img {
     animation: slide 0.3s steps(3) infinite alternate;
 }
-.condoi{
+
+.condoi {
     width: 6.4vw;
-    height:4.53333333333333333333333333333333333vw;
+    height: 4.53333333333333333333333333333333333vw;
     overflow: hidden;
     /* animation:run 2s ease-in-out infinite; */
 }
+
 .condoi>img {
-    width:6.4vw;
-    height:4.53333333333333333333333333333333333vw;
+    width: 6.4vw;
+    height: 4.53333333333333333333333333333333333vw;
     /* animation: slide 0.3s steps(3) infinite alternate; */
 }
-.loading-container{
+
+.loading-container {
     position: relative;
     display: flex;
     justify-content: start;
-    height:2vw;
-    width:100%;
+    height: 2vw;
+    width: 100%;
     align-items: center;
 }
-.loading-bar{
+
+.loading-bar {
     width: 100%;
-    height:2vw;
+    height: 2vw;
     background-color: rgb(253, 171, 171);
     border-radius: 100px;
-    position:absolute;
-    z-index:1;
-    border:5px solid black;
+    position: absolute;
+    z-index: 1;
+    border: 5px solid black;
 }
-.loading-process{
-    margin:5px;
+
+.loading-process {
+    margin: 5px;
     width: 0%;
-    height:2vw;
-    padding-left:25px;
+    height: 2vw;
+    padding-left: 25px;
     background-color: rgb(34, 253, 67);
     border-radius: 100px;
-    position:absolute;
-    z-index:2;
+    position: absolute;
+    z-index: 2;
     display: flex;
     justify-content: end;
     align-items: center;
-    animation:loading 5s ease-in-out forwards;
+    animation: loading 5s ease-in-out forwards;
     box-sizing: border-box;
 }
-.loading-process>img{
-    width:9vw;
-    height:6.75vw;
+
+.loading-process>img {
+    width: 9vw;
+    height: 6.75vw;
 }
-.loading-location{
-    width:100%;
-    height:100%;
+
+.loading-location {
+    width: 100%;
+    height: 100%;
     background-color: #000000f3;
     display: none;
     justify-content: center;
@@ -347,127 +354,141 @@ button:hover {
     opacity: 0;
     position: absolute;
     z-index: 101;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
 }
-.twinkling{
-    animation:twink 1s linear infinite;
+
+.twinkling {
+    animation: twink 1s linear infinite;
 }
-.card{
+
+.card {
     border-radius: 10px;
-    display:flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    color:black;
-    gap:10px;
-}
-.card>img{
-    width:4vw;
-    height:5.6vw;
-    border-radius: 10px;
-}
-.card>h3{
-    padding:0;
-    margin:0;
+    color: black;
+    gap: 10px;
 }
 
-.group{
-    width:80%;
-    height:40vw;
-    display:flex;
+.card>img {
+    width: 4vw;
+    height: 5.6vw;
+    border-radius: 10px;
+}
+
+.card>h3 {
+    padding: 0;
+    margin: 0;
+}
+
+.group {
+    width: 80%;
+    height: 40vw;
+    display: flex;
     align-items: center;
     flex-wrap: wrap;
     justify-content: start;
-    gap:20px;
-    border:1px solid black;
+    gap: 20px;
+    border: 1px solid black;
     box-shadow: 1px 1px 1px 1px black;
     border-radius: 10px;
     background-color: white;
     overflow: hidden;
     overflow-y: scroll;
     scrollbar-width: none;
-    padding:2vw;
+    padding: 2vw;
 }
-.user{
+
+.user {
     flex-basis: 20%;
     flex-shrink: 1;
     flex-grow: 1;
     max-width: 22.75vw;
     display: flex;
-    padding:20px;
+    padding: 20px;
     background-color: #eef2ff;
-    gap:1vw;
+    gap: 1vw;
     border-radius: 10px;
 }
-.user h3{
-    padding:0;
-    margin-top:0.5vw;
-    color:#2c3e50;
+
+.user h3 {
+    padding: 0;
+    margin-top: 0.5vw;
+    color: #2c3e50;
     font-size: 16px;
 }
-.user>img{
+
+.user>img {
     border-radius: 10px;
 }
-.user:hover{
+
+.user:hover {
     cursor: pointer;
     box-shadow: 1px 1px 1px black;
 }
 
-.group-name{
-    display:flex;
+.group-name {
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    width:80%;
+    width: 80%;
 }
-.group-img{
-    width:8vw;
-    height:10.88vw;
+
+.group-img {
+    width: 8vw;
+    height: 10.88vw;
     background-image: url("../img/545.png");
     background-size: cover;
-    display:flex;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
-.group-img>h4{
-    margin:0;
-    padding:0;
+
+.group-img>h4 {
+    margin: 0;
+    padding: 0;
     padding-bottom: 2.6vw;
     font-style: italic;
 }
 
-.menu-group{
-    width:52%;
+.menu-group {
+    width: 52%;
     display: flex;
     align-items: center;
 }
-.menu-group>ul{
+
+.menu-group>ul {
     list-style-type: none;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width:100%;
+    width: 100%;
     background-color: white;
-    padding:10px;
-    margin:0;
+    padding: 10px;
+    margin: 0;
     border-radius: 10px;
 }
-.menu-group>ul>li{
+
+.menu-group>ul>li {
     font-size: 16px;
     cursor: pointer;
-    padding-top:8px;
+    padding-top: 8px;
     padding-bottom: 8px;
-    padding-left:20px;
-    padding-right:20px;
+    padding-left: 20px;
+    padding-right: 20px;
     border-radius: 10px;
 }
-.menu-group>ul>li:hover{
+
+.menu-group>ul>li:hover {
     background-color: rgb(79 70 229);
-    color:white;
+    color: white;
 }
-.menu-group .active{
+
+.menu-group .active {
     background-color: rgb(79 70 229);
-    color:white;
+    color: white;
 }
 
 .batman {
@@ -475,166 +496,202 @@ button:hover {
     height: 5vw;
     overflow: hidden;
     position: absolute;
-    top:1vw;
+    top: 1vw;
     transition: all 0.5s ease;
 }
-.batman>img{
+
+.batman>img {
     width: 5vw;
     height: 15vw;
     animation: slide 0.3s steps(3) infinite alternate;
 }
-.back{
-    background-image:url("../img/back.png");
+
+.back {
+    background-image: url("../img/back.png");
     background-size: cover;
-    top:4vw;
-    left:2vw;
-    width:50px;
-    height:50px;
+    top: 4vw;
+    left: 2vw;
+    width: 50px;
+    height: 50px;
     background-color: white;
-    border-radius:10px ;
+    border-radius: 10px;
     box-shadow: 1px 1px 1px 1px black;
-    cursor:pointer;
+    cursor: pointer;
 }
-.back:active{
+
+.back:active {
     box-shadow: 0.5px 1px 1px 0.5px black;
 }
-.back:hover{
+
+.back:hover {
     opacity: 0.8;
 }
 
-.logout{
-    background-image:url("../img/back.png");
-    background-size: cover;
-    top:4vw;
-    left:2vw;
-    width:50px;
-    height:50px;
+.logout {
+    top: 4vw;
+    right: 2vw;
+    width: 50px;
+    height: 50px;
     background-color: white;
-    border-radius:10px ;
+    border-radius: 10px;
     box-shadow: 1px 1px 1px 1px black;
-    cursor:pointer;
+    cursor: pointer;
+}
+.logout:active {
+    box-shadow: 0.5px 1px 1px 0.5px black;
 }
 
-.danhhieu{
+.logout:hover {
+    opacity: 0.8;
+}
+.logout>img{
+    width:2.8vw;
+    height:2.8vw;
+}
+
+.danhhieu {
     width: 10vw;
     height: 2.65vw;
     overflow: hidden;
 }
-.danhhieu>img{
-    width:10vw;
+
+.danhhieu>img {
+    width: 10vw;
     animation: slide 0.4s steps(6) infinite alternate;
 }
-.vip{
+
+.vip {
     width: 14vw;
     height: 5.1vw;
     overflow: hidden;
 }
-.vip>img{
-    width:14vw;
+
+.vip>img {
+    width: 14vw;
     animation: slide 0.4s steps(6) infinite alternate;
 }
 
-.paper{
+.paper {
     position: relative;
     display: flex;
-    width:50%;
-    height:80%;
+    width: 50%;
+    height: 80%;
     background-color: white;
     box-shadow: 1px 1px 1px 1px black;
     border: 1px solid black;
-    padding:3vw;
-    padding-top:2vw;
-    padding-bottom:2vw;
+    padding: 3vw;
+    padding-top: 2vw;
+    padding-bottom: 2vw;
     flex-wrap: wrap;
     flex-direction: column;
     font-size: 16px;
 }
 
-.paper p{
-    padding:0;
+.paper p {
+    padding: 0;
     margin: 5px;
 }
-.paper h3{
-    margin:10px;
+
+.paper h3 {
+    margin: 10px;
 }
 
-.head-paper{
-    height:10%;
+.head-paper {
+    height: 10%;
 }
-.head-paper>h2{
-    padding:0;
-    margin:0;
+
+.head-paper>h2 {
+    padding: 0;
+    margin: 0;
 }
-.luamachoi{
-    width:6vw;
-    height:6vw;
-    margin-top:1vw;
+
+.luamachoi {
+    width: 6vw;
+    height: 6vw;
+    margin-top: 1vw;
     overflow: hidden;
 }
-.luamachoi>img{
-    height:6vw;
-    width:18vw;
-    animation:slide-right 0.3s steps(3) infinite;
+
+.luamachoi>img {
+    height: 6vw;
+    width: 18vw;
+    animation: slide-right 0.3s steps(3) infinite;
 }
-.certificate{
-    margin-top:1vw;
+
+.certificate {
+    margin-top: 1vw;
 }
-.certificate h4{
-    padding:0;
-    margin:0;
+
+.certificate h4 {
+    padding: 0;
+    margin: 0;
 }
-.myInfor{
+
+.myInfor {
     display: flex;
 }
-.info{
-    margin-left:2vw;
-}
-.running{
-    position: absolute;
-    width:80%;
-    top:1vw;
-    animation:run 5s ease-in-out infinite;
-}
-.running-man{
-    /* position: absolute; */
-    width:6vw;
-    height:6vw;
-    overflow: hidden;
-}
-.running-man>img{
-    width:24vw;
-    height:24vw;
-    animation:goAhead 0.5s steps(4) infinite;
-}
-.running-pikachu{
-    width:5vw;
-    height:2.63vw;
-    overflow: hidden;
-}
-.running-pikachu>img{
-    width:20vw;
-    height:2.63vw;
-    animation:slide-right 0.5s steps(4) infinite;
-}
-.hi-pikachu{
-    position: absolute;
-    bottom:1vw;
-    left:1vw;
-    width:5vw;
-    height:5vw;
-    overflow: hidden;
-}
-.hi-pikachu>img{
-    width:20vw;
-    height:4.72vw;
-    animation:slide-right 0.5s steps(4) infinite;
+
+.info {
+    margin-left: 2vw;
 }
 
-.inforText{
+.running {
+    position: absolute;
+    width: 80%;
+    top: 1vw;
+    animation: run 5s ease-in-out infinite;
+}
+
+.running-man {
+    /* position: absolute; */
+    width: 6vw;
+    height: 6vw;
+    overflow: hidden;
+}
+
+.running-man>img {
+    width: 24vw;
+    height: 24vw;
+    animation: goAhead 0.5s steps(4) infinite;
+}
+
+.running-pikachu {
+    width: 5vw;
+    height: 2.63vw;
+    overflow: hidden;
+}
+
+.running-pikachu>img {
+    width: 20vw;
+    height: 2.63vw;
+    animation: slide-right 0.5s steps(4) infinite;
+}
+
+.hi-pikachu {
+    position: absolute;
+    bottom: 1vw;
+    left: 1vw;
+    width: 5vw;
+    height: 5vw;
+    overflow: hidden;
+}
+
+.hi-pikachu>img {
+    width: 20vw;
+    height: 4.72vw;
+    animation: slide-right 0.5s steps(4) infinite;
+}
+
+.inforText {
     font-weight: 300;
     font-size: 18px;
     /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
-    color:#0056b3;
+    color: #0056b3;
+}
+
+.hide{
+    visibility: hidden;
+    display:none;
 }
 
 /* .book .spot{
