--- a/web/css/style.css
+++ b/web/css/style.css
@@ -77,6 +77,18 @@ body {
 .h-100{
     height:100%;
 }
+.w-75{
+    width:75%;
+}
+.h-75{
+    height:75%;
+}
+.w-50{
+    width:50%;
+}
+.h-50{
+    height:50%;
+}
 .wrapper{
     flex-wrap: wrap;
 }
