--- a/web/css/component.css
+++ b/web/css/component.css
@@ -294,26 +294,29 @@ button:hover {
 .pet {
     width: 11vw;
     height: 11vw;
-    bottom:0vw;
-    right:0vw;
+    bottom: 0vw;
+    right: 0vw;
     overflow: hidden;
     /* animation: run 5s ease-in-out forwards; */
 }
-.pet>.linh-thu{
+
+.pet>.linh-thu {
     scale: -1 1;
     animation: slide 0.3s steps(3) infinite alternate;
 }
+
 .pet-ac {
     width: 8vw;
     height: 8vw;
-    left:-1vw;
-    top:-1vw;
+    left: -1vw;
+    top: -1vw;
     overflow: hidden;
     /* animation: run 5s ease-in-out forwards; */
 }
-.pet-ac>.than-chet{
-    width:8vw;
-    height:64vw;
+
+.pet-ac>.than-chet {
+    width: 8vw;
+    height: 64vw;
     animation: slide-than-chet 0.4s steps(8) infinite;
 }
 
@@ -321,7 +324,8 @@ button:hover {
     from {
         transform: 0;
     }
-    to{
+
+    to {
         transform: translateY(-100%);
     }
 }
@@ -504,7 +508,7 @@ button:hover {
     padding: 10px;
     margin: 0;
     border-radius: 10px;
-    gap:10px;
+    gap: 10px;
 }
 
 .menu-group>ul>li {
@@ -573,6 +577,7 @@ button:hover {
     box-shadow: 1px 1px 1px 1px black;
     cursor: pointer;
 }
+
 .logout:active {
     box-shadow: 0.5px 1px 1px 0.5px black;
 }
@@ -580,9 +585,10 @@ button:hover {
 .logout:hover {
     opacity: 0.8;
 }
-.logout>img{
-    width:2.8vw;
-    height:2.8vw;
+
+.logout>img {
+    width: 2.8vw;
+    height: 2.8vw;
 }
 
 .danhhieu {
@@ -725,37 +731,93 @@ button:hover {
     color: #0056b3;
 }
 
-.hide{
+.hide {
     visibility: hidden;
-    display:none;
+    display: none;
 }
 
-.infor-user{
-    padding:2vw;
+.infor-user {
+    padding: 2vw;
 }
-.infor-content{
-    margin-top:1vw;
-    width:100%;
-    gap:5vw;
+
+.infor-content {
+    margin-top: 1vw;
+    width: 100%;
+    gap: 5vw;
 }
-.infor-self{
-    margin-top:1vw;
-    width:100%;
-    gap:5vw;
+
+.infor-self {
+    margin-top: 1vw;
+    width: 100%;
+    gap: 5vw;
 
 }
-.infor-self>.infor{
-    width:75%;
+
+.infor-self>.infor {
+    width: 75%;
     border-left: 1px solid rgba(15, 114, 0, 0.381);
-    padding-left:10px;
+    padding-left: 10px;
 }
-.infor-content>*{
+
+.infor-content>* {
     border-left: 1px solid rgba(15, 114, 0, 0.381);
-    padding-left:10px;
+    padding-left: 10px;
 }
-.infor-content h3{
+
+.infor-content h3 {
     padding: 0;
-    margin:0;
+    margin: 0;
+}
+
+.toast {
+    width:20rem;
+    height:20rem;
+    z-index: 102;
+    position: absolute;
+    left:25%;
+    display:none;
+    transform: translateY(-200%);
+}
+
+.pet-toast {
+    width: 10vw;
+    height: 10vw;
+    overflow: hidden;
+}
+
+.pet-toast>img {
+    width: 10vw;
+    height: 20vw;
+    animation: fly 0.35s steps(2) infinite;
+}
+
+.chatbox {
+    position: absolute;
+    background-color: #f1f1f1;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 10px 15px;
+    width: 200px;
+    height: 50px;
+    font-size: 14px;
+    color: #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    left:20vw;
+    margin-bottom:2.4vw;
+    text-shadow: 1px 1px 1px 1px;
+}
+
+.chatbox::after {
+    content: '';
+    position: absolute;
+    bottom: 10px;
+    left: -20px;
+    border-width: 30px;
+    border-style: solid;
+    border-color: #f1f1f1 transparent transparent transparent;
+    transform: rotateX(180deg);
 }
 
 /* .book .spot{
