--- a/web/template/toast.html
+++ b/web/template/toast.html
@@ -1,76 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body style="width:100vw;height:100vh;">
-    <style>
-        .pet {
-            width: 5vw;
-            height: 5vw;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .pet>img {
-            width: 5vw;
-            height: 10vw;
-            animation: fly 0.35s steps(2) infinite;
-        }
-
-        .chatbox {
-            position: relative;
-            background-color: #f1f1f1;
-            border: 1px solid #ccc;
-            border-radius: 10px;
-            padding: 10px 15px;
-            max-width: 300px;
-            font-size: 14px;
-            color: #333;
-        }
-
-        .chatbox::after {
-            content: '';
-            position: absolute;
-            bottom: 0px;
-            /* Điều chỉnh vị trí theo nhu cầu */
-            left: -5px;
-            /* Vị trí đuôi */
-            border-width: 10px;
-            /* Kích thước đuôi */
-            border-style: solid;
-            border-color: #f1f1f1 transparent transparent transparent;
-            /* Màu và kiểu của đuôi */
-        }
-
-        .w-100 {
-            width: 100%;
-        }
-
-        .h-100 {
-            height: 100%;
-        }
-
-        @keyframes fly {
-            from {
-                transform: 0%;
-            }
-
-            to {
-                transform: translateY(-100%);
-            }
-        }
-    </style>
+<div style="position:relative" class="toast">
     <div class="w-100 h-100" style="display:flex; justify-content: center; align-items: center;">
         <div class="pet">
             <img src="../img/toast.png">
         </div>
-        <div class="chatbox"></div>
+        <div class="chatbox">
+            Bạn đã đăng nhập thành công!
+        </div>
     </div>
-</body>
-
-</html>
+</div>
