--- a/web/template/history.html
+++ b/web/template/history.html
@@ -1,3 +1,24 @@
-<div class="d-flex flex-column">
-    <div class="turn"></div>
+<div class="turn" id="turn1">
+    <div class="turn-title">Lần 1</div>
+    <div class="group-history" >
+        <p>Nhóm 1</p>
+        <ul class="user-history" id="gr1">
+        </ul>
+    </div>
+    <div class="group-history">
+        <p>Nhóm 2</p>
+        <ul class="user-history" id="gr2">
+        </ul>
+    </div>
+    <div class="group-history" >
+        <p>Nhóm 3</p>
+        <ul class="user-history" id="gr3">
+        </ul>
+    </div>
+    <div class="group-history">
+        <p>Nhóm 4</p>
+        <ul class="user-history"  id="gr4">
+        </ul>
+    </div>
+    <div class="line"></div>
 </div>
